k3s-userapps/vaultwarden/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/pod: vaultwarden
  template:
    metadata:
      labels:
        app.kubernetes.io/pod: vaultwarden
    spec:
      volumes:
        - name: vaultwarden
          persistentVolumeClaim:
            claimName: vaultwarden
      containers:
        - image: 'ghcr.io/dani-garcia/vaultwarden:1.33.0'
          imagePullPolicy: IfNotPresent
          name: vaultwarden
          livenessProbe:
            failureThreshold: 1
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - containerPort: 80
              protocol: TCP
              name: "http"
          volumeMounts:
            - mountPath: /data
              name: vaultwarden
