k3s-userapps/vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://vaultwarden.kirillorlov.pro"
    gethomepage.dev/group: "Infra"
    gethomepage.dev/name: vaultwarden
    gethomepage.dev/pod-selector: "app.kubernetes.io/pod=vaultwarden"
    gethomepage.dev/icon: "https://raw.githubusercontent.com/homarr-labs/dashboard-icons/refs/heads/main/svg/vaultwarden.svg"
  name: vaultwarden
  namespace: vaultwarden
  labels:
    kirillorlov.pro/expose: external
spec:
  rules:
  - host: vaultwarden.kirillorlov.pro
    http:
      paths:
      - backend:
          service:
            name: vaultwarden
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - vaultwarden.kirillorlov.pro
    secretName: vaultwarden-tls
